--- a/aa_Day1.ipynb
+++ b/aa_Day1.ipynb
@@ -7,13 +7,12 @@
    "source": [
     "My solution to https://adventofcode.com/2024/day/1.\n",
     "This was refactored in 2025 to use lists instead of columns in pandas. I also shortened the solutions using list comprehensions.\n",
-    "Using Python3.9.21\n",
     "- Annette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "a37f06e8",
    "metadata": {},
    "outputs": [],
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "df2b5cd0",
    "metadata": {},
    "outputs": [
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "ce997b57",
    "metadata": {},
    "outputs": [
@@ -75,7 +74,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -89,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
