--- a/aa_day2.ipynb
+++ b/aa_day2.ipynb
@@ -1,31 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My solution to https://adventofcode.com/2024/day/2\n",
+    "This was refactored in 2025 to use lists instead of columns in pandas. I also shortened the solutions using list comprehensions.\n",
+    "Requires numpy module.\n",
+    "- Annette"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code\n",
-    "#Day2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#import modules\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Open file and get information\n",
+    "file = open('day2_input.txt','r')\n",
+    "lines = file.read().splitlines()\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Part1 Function\n",
     "def safetest (numarr,ascendstat):\n",
     "    '''numarr : array of numbers\n",
     "    ascendstat : True for ascending numbers    \n",
@@ -39,94 +59,62 @@
     "            return False\n",
     "        elif diff > 3:\n",
     "            return False\n",
-    "    return True\n",
-    "\n"
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "file = open('Day2 input.txt','r')\n",
-    "lines = file.readlines()\n",
-    "file.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "269"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 1 Answer: 269\n"
+     ]
     }
    ],
    "source": [
-    "# Part 1 \n",
+    "# Part 1 Solution\n",
     "safecount = 0\n",
+    "numarr_lst = []\n",
     "for l in lines:\n",
-    "    l = l.replace('\\n','')\n",
-    "    nums = l.split(' ')\n",
-    "    numL = []\n",
-    "    for n in nums:\n",
-    "        numL.append(int(n))\n",
+    "    numL = [int(i) for i in l.split()]\n",
     "    numarr = np.array(numL)\n",
+    "    numarr_lst.append(numarr) #use in Part 2\n",
     "    \n",
     "    if safetest(numarr,True) or safetest (numarr,False): #test in ascending or descending\n",
     "        safecount +=1\n",
     "            \n",
-    "safecount"
+    "print(f\"Part 1 Answer: {safecount}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "337"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part 2 Answer: 337\n"
+     ]
     }
    ],
    "source": [
-    "#Part 2\n",
-    "safecount = 0\n",
-    "for l in lines:\n",
-    "    l = l.replace('\\n','')\n",
-    "    nums = l.split(' ')\n",
-    "    numL = []\n",
-    "    for n in nums:\n",
-    "        numL.append(int(n))\n",
-    "    numarr = np.array(numL)\n",
-    "    \n",
-    "\n",
+    "#Part 2 Solution\n",
+    "safecount2 = 0\n",
+    "for numarr in numarr_lst:\n",
     "    for ind in range(len(numarr)): #loop through numbers, removing each one from array\n",
     "        numarr2 = np.delete(numarr,ind) \n",
     "\n",
     "        if safetest(numarr2, True) or safetest(numarr2,False): #test both in ascending and descending\n",
-    "            safecount +=1 #count as safe if test \n",
+    "            safecount2 +=1 #count as safe if test \n",
     "            break\n",
     "\n",
-    "        \n",
-    "            \n",
-    "safecount"
+    "print(f\"Part 2 Answer: {safecount2}\")"
    ]
   },
   {
@@ -139,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
