--- a/aa_day6.ipynb
+++ b/aa_day6.ipynb
@@ -1,93 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My solution to https://adventofcode.com/2024/day/6.\n",
+    "\n",
+    "- Annette"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Import module to time solutions\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['......#...........#..............................#..............................#...........................##...............#....\\n',\n",
-       " '.............#..............#........#......##...................................................#............##...#..........#...\\n',\n",
-       " '...#..................#..............#.........#...#.........................................................................#..#.\\n',\n",
-       " '.....#..........#...................#.....................#..........#...........#......#..#...................#..................\\n',\n",
-       " '...#...............................................##..................#............#.....#...................#...................\\n',\n",
-       " '.#.#..#...................#.##.................#..........#................................#......#.........##..................#.\\n',\n",
-       " '....................#...................#....#.........#....................#....................................................#\\n',\n",
-       " '..........#......#...................................................................................................#....#.......\\n',\n",
-       " '.#...............#.........#...........#...............#...................#......#...............................................\\n',\n",
-       " '............#...........#........#..##.......#........#.....#................................##...................................\\n']"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#get input\n",
-    "\n",
-    "fileN = 'Day6 input.txt'\n",
-    "file = open(fileN,'r')\n",
-    "lines = file.readlines()\n",
-    "file.close()\n",
-    "lines[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "130 130\n"
+      "matrix of 130 * 130\n"
      ]
     }
    ],
    "source": [
-    "# get matrix\n",
+    "#Open file and get information, it is a matrix\n",
+    "with open (\"day6_input.txt\", \"r\") as f:\n",
+    "    matrix = f.read().splitlines()\n",
     "\n",
-    "mtx = [] \n",
     "\n",
-    "for l in lines:\n",
-    "    mtx.append(l.strip())\n",
+    "maxrow = len(matrix)\n",
+    "maxcol = len(matrix[0])\n",
     "\n",
-    "maxrow = len(mtx)\n",
-    "maxcol = len(mtx[0])\n",
-    "\n",
-    "print(maxrow,maxcol)"
+    "print(f\"matrix of {maxrow} * {maxcol}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Part 1 Dictionary and Function\n",
+    "\n",
     "#dictionary of the [next turn direction,row effect, col effect,limit]\n",
     "turns = {'up':['right',-1,0,-1],\n",
     "         'right':['down',0,1,maxcol],\n",
@@ -142,21 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "exited matrix\n",
-      "4454\n",
-      "--- 0.006059885025024414 seconds ---\n"
+      "Part 1 Answer: 4454\n",
+      "--- 0.002063751220703125 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "#Part 1\n",
+    "#Part 1 Solution\n",
+    "\n",
+    "mtx = matrix[:]\n",
     "start = time.time()\n",
     "\n",
     "totalsteps = 1\n",
@@ -169,26 +134,21 @@
     "        row = mtx.index(m)\n",
     "        col = m.index('^')\n",
     "        direc = 'up'\n",
-    "        #print('orig:',row,col,'0',totalsteps)\n",
-    "        #print(direc,end=': ')\n",
-    "\n",
     "\n",
     "#tracking, counting totalsteps        \n",
     "        \n",
     "while direc != 'done':\n",
     "    totalturns +=1\n",
-    "    row,col,direc,steps = countTurn(row,col,direc)\n",
+    "    row,col,direc,steps = countSteps(row,col,direc)\n",
     "    totalsteps += steps\n",
-    "    #print(row,col,steps,totalsteps)\n",
-    "    #print(direc,end=': ')\n",
     "    \n",
-    "print(totalsteps)\n",
+    "print(f\"Part 1 Answer: {totalsteps}\")\n",
     "print(\"--- %s seconds ---\" % (time.time() - start))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -197,37 +157,23 @@
        "133"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#number of turns before exiting\n",
+    "#Out of interest, number of turns before exiting\n",
     "totalturns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['......#...........#..............................#..............................#...........................##...............#....',\n",
-       " '.............#..............#........#......##...................................................#............##...#..........#...',\n",
-       " '...#..................#..............#.........#...#.........................................................................#..#.',\n",
-       " '.....#..........#...................#.....................#..........#...........#......#..#...................#..................',\n",
-       " '...#...............................................##..................#............#.....#...................#...................']"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Part 2 A.\n",
     "#generate original sample matrix\n",
     "\n",
     "dtx = mtx.copy() # where all 'X' marked\n",
@@ -235,12 +181,12 @@
     "origmtx = [] #generate original mtx with no 'X', just '.'\n",
     "for t in dtx:\n",
     "    origmtx.append(t.replace('X','.'))\n",
-    "origmtx[:5]\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -249,13 +195,13 @@
        "4453"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Part2\n",
+    "#Part 2 B.\n",
     "#New obstacles can only be in travelled path, spots marked with 'X' in dtx\n",
     "#get matrix positions with X\n",
     "\n",
@@ -272,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 41,
    "metadata": {
     "scrolled": false
    },
@@ -283,13 +229,12 @@
      "text": [
       "Starting point: 45 42 up\n",
       "Part2 Answer =  1503\n",
-      "--- 4.691971063613892 seconds ---\n"
+      "--- 2.890979051589966 seconds ---\n"
      ]
     }
    ],
    "source": [
-    "#Part2\n",
-    "\n",
+    "#Part2 C. Solution\n",
     "\n",
     "#timing\n",
     "start = time.time()\n",
@@ -343,18 +288,11 @@
     "print('Part2 Answer = ',len(iloop_coords))\n",
     "print(\"--- %s seconds ---\" % (time.time() - start))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -368,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
