add descriptions to the solutions for day 4 and 5

--- a/aa_day4.ipynb
+++ b/aa_day4.ipynb
@@ -6,6 +6,12 @@
    "source": [
     "My solution to https://adventofcode.com/2024/day/4\n",
     "\n",
+    "The approach was to create a several matrices that represented the matrix in the file, but in different orientations.\n",
+    "\n",
+    "For part 1, four matrices were created and used (1) original horizontal where words appear left to right, (2) vertical, (3) diagonal (upper right to lower left), (4) another diagonal (upper left to lower right). I counted occurences of 'XMAS' as well as 'SAMX' (opposite direction) in these matrices to get the total.\n",
+    "\n",
+    "For part 2, we were looking for diagonal MAS and SAMs crossing each other at 'A'. I looked for these in the diagonal matrices created in Part 1 and counted the total.\n",
+    "\n",
     "- Annette"
    ]
   },
