--- a/aa_day5.ipynb
+++ b/aa_day5.ipynb
@@ -5,6 +5,13 @@
    "metadata": {},
    "source": [
     "My solution to https://adventofcode.com/2024/day/5\n",
+    "\n",
+    "The approach used in Part 1 was to find valid page lists and then add up the middle page in each list. A function printTest was created to check validity of each page list (based on the rules that are saved as a separate list).\n",
+    "\n",
+    "Part 1 also collected invalid page lists in list failedPL. \n",
+    "\n",
+    "Part 2 worked on the list failedPL. For each failed page list, page swaps were made using function rearrSched to attempt to make these lists valid. The successful attempts have their middle pages added up to a new total.\n",
+    "\n",
     "This was refactored in 2025, shortened by using list comprehensions and list unpacking.\n",
     "\n",
     "- Annette"
@@ -113,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +142,7 @@
     "                jp = printSched[j]\n",
     "#                 print('\\n',ip,jp)\n",
     "                for first,second in rules:\n",
-    "                    if first == jp and second == ip: #reverse order\n",
+    "                    if first == jp and second == ip: #pages in wrong order\n",
     "                        passTesti = False\n",
     "                        correctSched.append(jp)\n",
     "                        correctSched.append(ip)\n",
