tidy up some comments on day3

--- a/aa_day3.ipynb
+++ b/aa_day3.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +56,6 @@
     "    try:\n",
     "        return [int(nums[0])*int(nums[1]), newtext]\n",
     "    except (TypeError,ValueError):\n",
-    "        #print(short2)\n",
-    "        #print(short2+ ' ' + newtext[:5])\n",
     "        return[0, short2+newtext]\n",
     "        "
    ]
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +97,7 @@
     "    start = text.index (\"do()\")\n",
     "    try:\n",
     "        end = text.index(\"don't()\")+7\n",
-    "    except ValueError: #if there is no don't\n",
+    "    except ValueError: #if there is no occurrence of \"don't\"\n",
     "        end = len(text)\n",
     "    enabled = text[start:end]\n",
     "    remainingText = text[end:]\n",
