tidy up solutions for days 8 and 14

--- a/aa_day8.ipynb
+++ b/aa_day8.ipynb
@@ -1,66 +1,58 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day8"
+    "My solution to https://adventofcode.com/2024/day/8.\n",
+    "\n",
+    "-Annette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['...............e...........j6.....................\\n',\n",
-       " '.....1...............................t.....i......\\n',\n",
-       " '.....4.......3..............x..tL......m..........\\n',\n",
-       " '.......L.....................Dxj..................\\n',\n",
-       " '4....X..................F.....................m...\\n']"
+       "50"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#open input file\n",
+    "#Open input file and get information\n",
     "\n",
-    "fileN = 'Day8 input.txt'\n",
+    "with open ('day8_input.txt','r') as f:\n",
+    "    lines = f.read().splitlines()\n",
     "\n",
-    "file = open(fileN,'r')\n",
-    "lines = file.readlines()\n",
-    "file.close()\n",
-    "\n",
-    "lines[:5]"
+    "len(lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "#create matrix and record antennae and their locations (i.e. that are not '.')\n",
+    "#Part1 A. Create matrix and record antennae and their locations (i.e. that are not '.')\n",
     "\n",
-    "mtx = []\n",
+    "mtx = lines[:]\n",
+    "maxrow = len(mtx)\n",
+    "maxcol = len(mtx[0])\n",
+    "\n",
     "ants = {} #dictionarry of antennae and their location as [row,col]\n",
     "\n",
-    "for row in range(len(lines)):\n",
-    "    l=lines[row].strip()\n",
-    "    mtx.append(l) #add line to matrix mtx\n",
-    "    \n",
-    "    for col in range(len(l)):\n",
+    "for row in range(maxrow):\n",
+    "    l = lines[row]\n",
+    "    for col in range(maxcol):\n",
     "        if l[col] != '.':\n",
     "            char = l[col]\n",
     "            if char not in ants: #create new key\n",
@@ -69,17 +61,17 @@
     "            else: #add new coordinates to existing key\n",
     "                charL = ants[char] \n",
     "                charL.append([row,col])\n",
-    "                ants[char] = charL\n"
+    "                ants[char] = charL\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxrow = len(mtx)\n",
-    "maxcol = len(mtx[0])\n",
+    "#Part 1 B. Functions\n",
     "\n",
     "def rowtest(row): #tests valid row value\n",
     "    global maxrow\n",
@@ -116,19 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part1 : 361\n"
+      "Part 1 Answer: 361\n"
      ]
     }
    ],
    "source": [
-    "#Part1 Calculation\n",
+    "#Part1 Function\n",
     "\n",
     "allAntinodes = []\n",
     "\n",
@@ -139,12 +131,12 @@
     "        if an not in allAntinodes:\n",
     "            allAntinodes.append(an)\n",
     "\n",
-    "print('Part1 :',len(allAntinodes))"
+    "print('Part 1 Answer:',len(allAntinodes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,19 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Part2 : 1249\n"
+      "Part 2 Answer: 1249\n"
      ]
     }
    ],
    "source": [
-    "#Part2 calculation\n",
+    "#Part2 Solution\n",
     "\n",
     "allAntinodes = []\n",
     "\n",
@@ -239,20 +231,13 @@
     "    for an in antinodes:\n",
     "        if an not in allAntinodes:\n",
     "            allAntinodes.append(an)\n",
-    "print('Part2 :',len(allAntinodes))"
+    "print('Part 2 Answer:',len(allAntinodes))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
