--- a/aa_day25.ipynb
+++ b/aa_day25.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Locks and Keys\n",
     "\n",
-    "Part 1 approach involves converting each key and each lock into numpy arrays of 5 positions. Each position of the lock can be added to the corresponding position of the key. If this sum is 5 for all 5 positions, it's a perfect fit. If it's less than 5, the key will still work. Part 1 adds all the situations that the key still works.  \n",
+    "Part 1 approach involves converting each key and each lock into lists of 5 positions. Each position of the lock can be added to the corresponding position of the key. If this sum is 5 for all 5 positions, it's a perfect fit. If it's less than 5, the key will still work. Part 1 adds all the situations that the key still works.  \n",
     "\n",
     "There is no Part 2 for this day. \n",
     "\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,40 +27,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 1 Functions\n",
-    "def barrelcount(startline,endline) -> dict:\n",
-    "    '''returns dictionary of a single lock or key'''\n",
+    "# Part 1 Function\n",
+    "def barrelcountL(startline,endline) -> list:\n",
+    "    '''converts a pattern in text into a list of 5 positions or barrels\n",
+    "    representing either lock or key'''\n",
     "    global lines\n",
-    "    lork = {0:0,1:0,2:0,3:0,4:0} #lock or key\n",
+    "    lork = [0 for i in range(5)]#lock or key\n",
     "    for row in range(startline,endline):\n",
     "        for col in range(5):\n",
     "            if lines[row][col]== '#':\n",
     "                lork[col]+=1\n",
-    "    return lork\n",
-    "\n",
-    "def barrelcountL(startline,endline) -> list:\n",
-    "    '''returns list of a single lock or key, switch to list so it can be converted to an array'''\n",
-    "    global lines\n",
-    "    lorkD = barrelcount(startline,endline)\n",
-    "    lorkL = [val for val in lorkD.values()]\n",
-    "    return lorkL"
+    "    return lork\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numbers of locks and keys: 250 250\n",
-      "Values of first lock and first key: [0 5 4 2 3] [1 5 0 5 2]\n"
+      "There are 250 locks and 250 keys.\n",
+      "Values of first lock is [0 5 4 2 3] and first key is [1 5 0 5 2].\n"
      ]
     }
    ],
@@ -86,13 +80,13 @@
     "keys = np.array(keys)\n",
     "\n",
     "#Check by printing out values\n",
-    "print('Numbers of locks and keys:',len(locks), len(keys))\n",
-    "print('Values of first lock and first key:',locks[0], keys[0])"
+    "print(f'There are {len(locks)} locks and {len(keys)} keys.')\n",
+    "print(f'Values of first lock is {locks[0]} and first key is {keys[0]}.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -115,11 +109,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There is no Part 2 for Day 25."
+   ]
   }
  ],
  "metadata": {
