--- a/aa_day11.ipynb
+++ b/aa_day11.ipynb
@@ -1,25 +1,39 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day 11 \n",
-    "#Changing Stones"
+    "My solution to https://adventofcode.com/2024/day/11.\n",
+    "\n",
+    "Changing Stones. Keeping track of stones that either split into or increase in value after each blink. Over several blinks, there are rapidly increasing number of stones.\n",
+    "\n",
+    "Part 1 used a function changeStones to transform or split the stones depending on their value. For each blink, a list of new stones is generated. 25 blinks occur in Part 1 and the total number of stones is returned.\n",
+    "\n",
+    "Part 2 involves 75 total blinks. It is computationally instensive and very impractical to keep track of the stones individually. Instead, a dictionary numD is used to store stones of the same value under one key. They all undergo the same transformation after each blink. The function used is blinkD.  \n",
+    "\n",
+    "-Annette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Open file and get information, which is only 1 line of text.\n",
+    "with open (\"day11_input.txt\", \"r\") as f:\n",
+    "    lines = f.read().splitlines()\n",
+    "input = lines[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Part1 and 2 functions\n",
-    "\n",
     "\n",
     "def changeStones(num):\n",
     "    '''change stones as defined in AoC'''\n",
@@ -64,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +90,7 @@
     }
    ],
    "source": [
-    "#test with sample:\n",
+    "#Trial with sample:\n",
     "sample = '125 17'\n",
     "blinks = 25\n",
     "numD = strToNumD(sample)\n",
@@ -95,19 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample after 25 times has 217812 stones.\n"
+      "Part 1 Answer: Sample after 25 times has 217812 stones.\n"
      ]
     }
    ],
    "source": [
-    "#Part1\n",
+    "#Part 1 Solution\n",
     "input = '510613 358 84 40702 4373582 2 0 1584'\n",
     "\n",
     "blinks = 25\n",
@@ -121,20 +135,20 @@
     "for num in numD:\n",
     "    totalstones += numD[num]\n",
     "\n",
-    "print(f'Sample after {i+1} times has {totalstones} stones.')"
+    "print(f'Part 1 Answer: Sample after {i+1} times has {totalstones} stones.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample after 75 times has 259112729857522 stones.\n",
-      "total seconds 0.13584303855895996\n"
+      "Part 2 Answer: Sample after 75 times has 259112729857522 stones.\n",
+      "total seconds 0.0634300708770752\n"
      ]
     }
    ],
@@ -156,21 +170,14 @@
     "for num in numD:\n",
     "    totalstones += numD[num]\n",
     "\n",
-    "print(f'Sample after {i+1+25} times has {totalstones} stones.')\n",
+    "print(f'Part 2 Answer: Sample after {i+1+25} times has {totalstones} stones.')\n",
     "print('total seconds', time.time()-start)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
