--- a/aa_day9.ipynb
+++ b/aa_day9.ipynb
@@ -1,29 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day 9\n",
-    "#Defragmentation"
+    "My solution to https://adventofcode.com/2024/day/9.\n",
+    "\n",
+    "This is like defragmenting a hard drive task.\n",
+    "\n",
+    "-Annette\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import to time solutions\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,33 +81,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'5118568949066919487958547605584337789875656321549567796966231968622383415359562536527611728535939122'"
+       "19999"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Open input file \n",
+    "#Open input file , which consists of one very long line\n",
     "\n",
-    "fileN = 'Day9 input.txt'\n",
+    "fileN = 'day9_input.txt'\n",
+    "with open (fileN,'r') as f:\n",
+    "    line = f.readline().strip()\n",
     "\n",
-    "file = open(fileN,'r')\n",
-    "line = file.readline()\n",
-    "line[-100:]"
+    "len(line)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -115,12 +117,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step1 0.03910207748413086 seconds\n",
-      "step2 0.02602410316467285 seconds\n",
-      "step3 0.0073947906494140625 seconds\n",
+      "step1 0.01150202751159668 seconds\n",
+      "step2 0.007477998733520508 seconds\n",
+      "step3 0.003231048583984375 seconds\n",
       "\n",
       "Part 1 Answer: 6448989155953\n",
-      "after 0.07276391983032227 seconds\n"
+      "after 0.022283077239990234 seconds\n"
      ]
     }
    ],
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
