light refactoring and clean up

--- a/aa_day22.ipynb
+++ b/aa_day22.ipynb
@@ -1,19 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day 22 Monkey Banana Exchange"
+    "My solution to https://adventofcode.com/2024/day/22, the monkey banana exchange.\n",
+    "\n",
+    "-Annette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -21,30 +19,21 @@
     {
      "data": {
       "text/plain": [
-       "['12811750',\n",
-       " '12451632',\n",
-       " '12298126',\n",
-       " '340529',\n",
-       " '14279190',\n",
-       " '9086648',\n",
-       " '5785269',\n",
-       " '11561323',\n",
-       " '12464375',\n",
-       " '16563065']"
+       "1862"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#open file\n",
+    "#open file and get information\n",
     "\n",
-    "fileN = 'Day22 input.txt'\n",
-    "file = open(fileN,'r')\n",
-    "lines = file.read().splitlines()\n",
-    "lines[:10]"
+    "fileN = 'day22_input.txt'\n",
+    "with open(fileN,'r') as file:\n",
+    "    lines = file.read().splitlines()\n",
+    "len(lines)"
    ]
   },
   {
@@ -167,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -181,12 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
-   }
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
