--- a/aa_day13.ipynb
+++ b/aa_day13.ipynb
@@ -1,23 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Annette Alca\n",
-    "#Advent of Code 2024\n",
-    "#Day 13\n",
-    "#Tokens and Prizes"
+    "My solution to https://adventofcode.com/2024/day/13, tokens and prizes.\n",
+    "\n",
+    "This required module sympy to use algebra.\n",
+    "\n",
+    "-Annette"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sympy import symbols, Eq, solve #algebra solve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Part1 Functions\n",
+    "\n",
     "def minTokens(A,B,P): #brute force\n",
     "    '''input lists of button xy values and prize xy locations\n",
     "    output if prize is possible and if so minimum tokens'''\n",
@@ -38,8 +48,6 @@
     "    else:\n",
     "        return(False,0,None)\n",
     "\n",
-    "    \n",
-    "from sympy import symbols, Eq, solve #algebra solve\n",
     "\n",
     "def prizeMatch (A,B,P):  #algebra solve\n",
     "    a,b = symbols('a b')\n",
@@ -50,42 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Button A: X+11, Y+73',\n",
-       " 'Button B: X+65, Y+17',\n",
-       " 'Prize: X=18133, Y=4639',\n",
-       " '',\n",
-       " 'Button A: X+49, Y+13',\n",
-       " 'Button B: X+24, Y+79',\n",
-       " 'Prize: X=6664, Y=948',\n",
-       " '',\n",
-       " 'Button A: X+37, Y+28',\n",
-       " 'Button B: X+13, Y+90',\n",
-       " 'Prize: X=2448, Y=2574',\n",
-       " '']"
+       "1279"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#open file\n",
-    "fileN = 'Day13 input.txt'\n",
-    "file = open(fileN,'r')\n",
-    "lines = file.read().splitlines()\n",
-    "lines[:12]"
+    "#open file and get information\n",
+    "fileN = 'day13_input.txt'\n",
+    "with open(fileN,'r') as file:\n",
+    "    lines = file.read().splitlines()\n",
+    "len(lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -129,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,18 +218,11 @@
     "        #print(i,temp)\n",
     "print(f'Part2: {prizes} from {tokens} tokens')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -246,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
