update day24 part 1

--- a/aa_day24_undercons.ipynb
+++ b/aa_day24_undercons.ipynb
@@ -8,7 +8,8 @@
     "My solution to https://adventofcode.com/2024/day/24, titled Crossed Wires.\n",
     "\n",
     "This problem involves AND, OR, XOR calculations and conversion from binary to decimal.\n",
-    "My implementation involves a recursive function `collect_bin_string` to get values from all the input lines, which can't be performed in order (some operator values aren't available when they are needed in the text file).\n",
+    "\n",
+    "My <ins>Part 1</ins> solution involves a recursive function `get_more_b2_dict_items` to get values from all the input lines, which can't be performed in order (some operator values aren't available when they are needed in the text file).\n",
     "\n",
     "-Annette"
    ]
@@ -27,50 +28,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "d2455f98",
    "metadata": {},
    "outputs": [],
    "source": [
     "# open puzzle input and get information\n",
     "with open ('day24_input.txt', 'r') as f:\n",
-    "    lines = f.read().splitlines()\n",
-    "\n",
-    "#make a copy\n",
-    "lines2 = lines[:]"
+    "    lines = f.read().splitlines()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "ba74bbbe",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Part 1 Functions\n",
     "\n",
-    "bind = {} #short for binary dictionary\n",
+    "b2d = {} #short for binary dictionary\n",
     "\n",
-    "def get_bind(): \n",
+    "def get_b2_dict(lines:list): \n",
     "    '''create dictionary of strings and binary values up to line 89 of input'''\n",
-    "    global lines, bind\n",
+    "    global b2d\n",
     "    for l in lines[:90]:\n",
     "        key,val = l.split(': ')\n",
-    "        bind[key] = int(val)\n",
+    "        b2d[key] = int(val)\n",
     "\n",
-    "def operation(line):\n",
-    "    global bind\n",
+    "def operation(line:str):\n",
+    "    '''performs &,or,^ operations and assigns value to designated key '''\n",
+    "    global b2d\n",
     "    val1, op, val2, arrow, val3 = line.split()\n",
     "    if op == 'AND':\n",
-    "        bind[val3] = bind[val1] & bind[val2]\n",
+    "        b2d[val3] = b2d[val1] & b2d[val2]\n",
     "    elif op == 'OR':\n",
-    "        bind[val3] = bind[val1] or bind[val2]\n",
+    "        b2d[val3] = b2d[val1] or b2d[val2]\n",
     "    else:\n",
-    "        bind[val3] = bind[val1] ^ bind[val2]\n",
+    "        b2d[val3] = b2d[val1] ^ b2d[val2]\n",
     "\n",
-    "def collect_bin_string(op_list):\n",
+    "def get_more_b2_dict_items(op_list:list):\n",
     "    '''a recursive function to get all values in all operations'''\n",
-    "    global bind\n",
+    "    global b2d\n",
     "    for line in op_list:\n",
     "        try:\n",
     "            operation(line)\n",
@@ -79,19 +78,20 @@
     "            continue\n",
     "    if len(op_list) == 0:\n",
     "        return True\n",
-    "    return collect_bin_string(op_list)\n",
+    "    return get_more_b2_dict_items(op_list)\n",
     "\n",
-    "def convert_b2_to_b10(string):\n",
-    "    revstring = string[::-1]\n",
-    "    val = 0\n",
-    "    for i in range(len(revstring)):\n",
-    "        val += int(revstring[i])*2**i\n",
-    "    return val"
+    "def b2_dict_to_b10_value(b2z:dict):\n",
+    "    '''convert dictionary of z values to decimal number'''\n",
+    "    b10_total = 0\n",
+    "    for key in b2z:\n",
+    "        exponent = int(key[1:])\n",
+    "        b10_total += b2z[key] * 2**exponent\n",
+    "    return b10_total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "id": "eefac712",
    "metadata": {},
    "outputs": [
@@ -105,21 +105,60 @@
    ],
    "source": [
     "#Part 1 solution\n",
-    "lines3 = lines[:]\n",
-    "\n",
-    "get_bind()\n",
-    "completed = collect_bin_string(lines3[91:])\n",
+    "lines3 = lines[91:]\n",
+    "get_b2_dict(lines[:])\n",
+    "completed = get_more_b2_dict_items(lines3)\n",
     "if completed:\n",
-    "    keys = sorted([key for key in bind.keys() if key.startswith('z')], reverse=True)\n",
-    "    vals = [str(bind[key]) for key in keys]\n",
-    "    bin_string = ''.join(vals)\n",
-    "print(f'Part 1 Answer: {convert_b2_to_b10(bin_string)}')"
+    "    b2z = {key:b2d[key] for key in b2d.keys() if key.startswith('z')}\n",
+    "print(f'Part 1 Answer: {b2_dict_to_b10_value(b2z)}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72cd4695",
+   "id": "94a96441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Part2 Function\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b65c32d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Part2 Solution\n",
+    "b2x = {key:b2d[key] for key in b2d.keys() if key.startswith('x')}\n",
+    "b2y = {key:b2d[key] for key in b2d.keys() if key.startswith('y')}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "689a179a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b1110111100100111011011110111000110010001110000\n",
+      "0b1110111100101001011100110111000110001111110000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bin(xsum + ysum))\n",
+    "print(bin(zsum))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f273683b",
    "metadata": {},
    "outputs": [],
    "source": []
