--- a/aa_day14.ipynb
+++ b/aa_day14.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +189,7 @@
       "Part 2 Answer, Christmas tree first appears at 7492 seconds.\n",
       "Also appears at: \n",
       "17895 seconds, 28298 seconds, 38701 seconds, 49104 seconds, \n",
-      " when stdev of 29.76 is reached.\n"
+      " when stdev of 20.85 is reached.\n"
      ]
     }
    ],
@@ -215,16 +215,17 @@
     "    if std<23:\n",
     "        if not found:\n",
     "            print(f'Part 2 Answer, Christmas tree first appears at {t} seconds.')\n",
+    "            low_std = std\n",
     "            found = True\n",
     "            print ('Also appears at: ')\n",
     "        else:\n",
     "            print(f'{t} seconds', end =', ')\n",
-    "print (f'\\n when stdev of {round(std,2)} is reached.')"
+    "print (f'\\n when stdev of {round(low_std,2)} is reached.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
