--- a/aa_day7.ipynb
+++ b/aa_day7.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "Math operations on numpy arrays.\n",
     "\n",
-    "The Part 1 approach is to create an expanding numpy array (products and sums) as operators are taken from left to right. \n",
-    "- Function twoVals does the operation and is called repeatedly by the recursive function outputEachLine to create the final numpy array. \n",
-    "- outputEachLine also evaluates whether the expected resulting value is within this final array. If so, it returns the expected resulting value. If not, it returns 0.\n",
-    "- outputEachLine is called for every line in the input text and the total of its results is the Part 1 answer.\n",
+    "The <ins>Part 1</ins> approach is to create an expanding numpy array (products and sums) as operators are taken from left to right. \n",
+    "- Function `twoVals` does the operation and is called repeatedly by the recursive function `outputEachLine` to create the final numpy array. \n",
+    "- `outputEachLine` also evaluates whether the expected resulting value is within this final array. If so, it returns the expected resulting value. If not, it returns 0.\n",
+    "- `outputEachLine` is called for every line in the input text and the total of its results is the Part 1 answer.\n",
     "\n",
-    "The Part 2 approach is the same. The only difference is that the expanding numpy array contains more numbers (products, sums, and now the concatenated numer) as operators are taken from left to right. Function threeVals is used in place of twoVals in Part 1.\n",
+    "The <ins>Part 2</ins> approach is the same. The only difference is that the expanding numpy array contains more numbers (products, sums, and now the concatenated numer) as operators are taken from left to right. Function `threeVals` is used in place of twoVals in Part 1.\n",
     "\n",
     "-Annette"
    ]
